--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.22.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-modal": "^1.6.5",
     "react-router": "^3.0.0",
     "webpack": "^1.13.2"
   }
