--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^2.22.0",
+    "moment": "^2.17.1",
     "react": "^15.3.2",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-dates": "^4.3.2",
     "react-dom": "^15.3.2",
     "react-modal": "^1.6.5",
     "webpack": "^1.13.2"
